[package]
name = "react_scss"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A component generator for project with SCSS and React"
homepage = "https://github.com/johndalloxx/scss_react"
repository = "https://github.com/johndalloxx/scss_react"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
